force-app/main/default/objects/vlocity_ins__ProviderEducation__c/fields/vlocity_ins__InstitutionName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__InstitutionName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Institution Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>