force-app/main/default/objects/vlocity_ins__ProviderEducation__c/fields/vlocity_ins__ProgramCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProgramCompletedDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program Completed Date</label>
    <type>Date</type>
</CustomField>