force-app/main/default/objects/vlocity_ins__ProviderEducation__c/fields/vlocity_ins__SpecialtyType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SpecialtyType__c</fullName>
    <label>Specialty Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001 – General Practice</fullName>
            </value>
            <value>
                <fullName>002 – Family Practice</fullName>
            </value>
            <value>
                <fullName>003 – Internal Medicine</fullName>
            </value>
            <value>
                <fullName>004 – Geriatrics</fullName>
            </value>
            <value>
                <fullName>005 – Primary Care – Physician Assistants</fullName>
            </value>
            <value>
                <fullName>006 – Primary Care – Nurse Practitioners</fullName>
            </value>
            <value>
                <fullName>007 – Allergy and Immunology</fullName>
            </value>
            <value>
                <fullName>008 – Cardiology</fullName>
            </value>
            <value>
                <fullName>009 – NOT IN USE</fullName>
            </value>
            <value>
                <fullName>010 – Chiropractor</fullName>
            </value>
            <value>
                <fullName>011 – Dermatology</fullName>
            </value>
            <value>
                <fullName>012 – Endocrinology</fullName>
            </value>
            <value>
                <fullName>013 – ENT/Otolaryngology</fullName>
            </value>
            <value>
                <fullName>014 – Gastroenterology</fullName>
            </value>
            <value>
                <fullName>015 – General Surgery</fullName>
            </value>
            <value>
                <fullName>016 – Gynecology, OB/GYN</fullName>
            </value>
            <value>
                <fullName>017 – Infectious Diseases</fullName>
            </value>
            <value>
                <fullName>018 – Nephrology</fullName>
            </value>
            <value>
                <fullName>019 – Neurology</fullName>
            </value>
            <value>
                <fullName>020 – Neurosurgery</fullName>
            </value>
            <value>
                <fullName>021 – Oncology - Medical, Surgical</fullName>
            </value>
            <value>
                <fullName>022 – Oncology - Radiation/Radiation Oncology</fullName>
            </value>
            <value>
                <fullName>023 – Ophthalmology</fullName>
            </value>
            <value>
                <fullName>024 – NOT IN USE</fullName>
            </value>
            <value>
                <fullName>025 – Orthopedic Surgery</fullName>
            </value>
            <value>
                <fullName>026 – Physiatry, Rehabilitative Medicine</fullName>
            </value>
            <value>
                <fullName>027 – Plastic Surgery</fullName>
            </value>
            <value>
                <fullName>028 – Podiatry</fullName>
            </value>
            <value>
                <fullName>029 – Psychiatry</fullName>
            </value>
            <value>
                <fullName>030 – Pulmonology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>